# redpill-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2018-07-24-140116_users/: up.sql
migrations/2018-10-05-085839_posts/: up.sql
migrations/2019-02-15-095600_reactions/: up.sql
src/: db.rs  main.rs
src/post/: mod.rs  model.rs  schema.rs
src/reaction/: mod.rs  model.rs  schema.rs
src/user/: auth.rs  mod.rs  model.rs  schema.rs
