[package]
name = "redpill-server"
version = "0.1.0"
authors = ["Marco Castignoli"]

[dependencies]
rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.3", features = ["mysql", "r2d2", "chrono"] }
jwt = "0.4.0"
rust-crypto = "0.2"
rustc-serialize = "0.3"
chrono = { version = "0.4", features = ["serde"] }